# ml-kem-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: integration.yml  test.yml
benches/: benchmark.rs
fuzz/corpus/fuzz_all/: seed1
src/: aux_alg.rs  aux_fns.rs  auxiliary_algorithms.rs  byte_fns.rs  bytes2.rs  helpers.rs  issue.rs  k_pke.rs  lib.rs  ml_kem.rs  ntt.rs  old_lib.rs  sampling.rs  smoke_test.rs  temp.rs  traits.rs  types.rs  types2.rs  types3.rs
tests/: integration.rs  repitition.rs  test_vectors.rs  vectors.rs
tests/cctv_vectors/: mod.rs
tests/nist_vectors/: mod.rs
