[package]
name = "ml-kem-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FIPS 203 (draft): Module-Lattice-Based Key-Encapsulation Mechanism"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
documentation = "https://docs.rs/ml-kem-rs"
categories = ["cryptography", "no-std"]
repository = "https://github.com/integritychain/ml-kem-rs"
keywords = ["FIPS", "203", "lattice", "kem", "ml"]
rust-version = "1.72"
exclude = [".idea/*"]


[dependencies]
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
sha3 = "0.10.8"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }


[features]
default = ["ml_kem_512", "ml_kem_768", "ml_kem_1024"]
ml_kem_512 = []
ml_kem_768 = []
ml_kem_1024 = []


[dev-dependencies]
rand_chacha = "0.3.1"
