[package]
name = "fips203"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FIPS 203 (draft): Module-Lattice-Based Key-Encapsulation Mechanism"
authors = ["Eric Schorn <eschorn@integritychain.com>"]
documentation = "https://docs.rs/ml-kem-rs"
categories = ["cryptography", "no-std"]
repository = "https://github.com/integritychain/ml-kem-rs"
keywords = ["FIPS", "203", "lattice", "kem", "ml"]
rust-version = "1.72"


[dependencies]
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
rand_core = { version = "0.6.4", default-features = false }
sha3 = "0.10.8"
rand = "0.8.5"


[features]
default = ["default-rng", "ml_kem_512", "ml_kem_768", "ml_kem_1024"]
default-rng = ["rand_core/getrandom"]
ml_kem_512 = []
ml_kem_768 = []
ml_kem_1024 = []


[dev-dependencies]
rand = "0.8.5"
regex = "1.10.2"
hex = "0.4.3"
rand_chacha = "0.3.1"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false


[profile.bench]
debug = 2
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false